# depsguard-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: debug_osv.py  demo_ai.py  demo_scan.py  requirements.txt
src/depsguard/: analyzer.py  cli.py  http.py  models.py  scanner.py  server.py
src/depsguard/db/: __init__.py  nvd.py  osv.py
src/depsguard/parsers/: __init__.py  node.py  python.py
tests/: test_osv.py  test_parsers.py
