[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depsguard-mcp"
version = "0.1.0"
description = "AI-Powered Dependency Vulnerability & Breaking Change Analyzer MCP"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "litellm>=1.40",
    "pydantic>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "packaging>=24.0",
]

[project.optional-dependencies]
vcs = ["PyGithub>=2.0", "python-gitlab>=4.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "httpx"]

[project.scripts]
depsguard = "depsguard.cli:main"
depsguard-mcp = "depsguard.server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/depsguard"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
